canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
        - name: canary-demo
          image: idanarbel/rollouts-demo:yellow
          #image: idanarbel/rollouts-demo:orange
          #image: idanarbel/rollouts-demo:purple
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      canaryService: canary-demo-preview
      steps:
        - setWeight: 20
        - pause: {duration: 50}
        - setWeight: 60
        - pause: {duration: 50}
